# lariatsoft

./: .gitignore  CMakeLists.txt  README.md
AnalysisExample/: AnalysisExample.fcl  AnalysisExample_module.cc  CMakeLists.txt
BeamlineSim/: Jobsubmit.sh  MakeNewJobDir.py  MergeFiles.sh  README  Script.sh
Calibration/: CMakeLists.txt  CalWireROIT1034_module.cc  CalWireT1034_module.cc  caldata_lariat.fcl
Calibration/constants/: CMakeLists.txt  LArIATChargeCorrectionFactors_Run1.txt  LArIATChargeCorrectionFactors_Run2.txt  LArIATPhotodetectorSER_ch0.txt  LArIATPhotodetectorSER_ch0_Michels.txt  LArIATPhotodetectorSER_ch1_Michels.txt  LArIAT_Charge_Correction_Factors_v1.txt  PhotonLibrary_ToyMC_20171106_Run1_300kPerVoxel_24x_20y_45z.root  PhotonLibrary_ToyMC_20171106_Run2_300kPerVoxel_24x_20y_45z.root  PhotonLibrary_ToyMC_20171223_Run1_300kPerVoxel_24x_20y_45z.root
CosmicReco/: CMakeLists.txt  ClusterCrawlerLariat_module.cc  ClusterCrawler_PUREmodule.cc.PURE
DetectorSim/: CMakeLists.txt  SimDigit.fcl  SimLArIATDigits_module.cc  SimWireLArIAT_module.cc  SimWireT1034_module.cc  TOFSimDigits_module.cc  WCSimDigits_module.cc  detsimmodules_lariat.fcl
Geo/: AuxDetChannelMapAlg.cxx  AuxDetChannelMapAlg.h  AuxDetChannelMapLArIATAlg.cxx  AuxDetChannelMapLArIATAlg.h  AuxDetExptGeoHelperInterface.h  AuxDetGeoObjectSorterLArIAT.cxx  AuxDetGeoObjectSorterLArIAT.h  AuxDetGeometry.h  AuxDetGeometryCore.cxx  AuxDetGeometryCore.h  AuxDetGeometry_service.cc  CMakeLists.txt  ChannelMapLArIATAlg.cxx  ChannelMapLArIATAlg.h  GeoObjectSorterLArIAT.cxx  GeoObjectSorterLArIAT.h  LArIATAuxDetGeometryHelper.h  LArIATAuxDetGeometryHelper_service.cc  LArIATGeometryHelper.h  LArIATGeometryHelper_service.cc  geometry_lariat.fcl
Geo/gdml/: CMakeLists.txt  lariat.gdml  lariat_5mm.gdml  lariat_geo.C  lariat_largewc.gdml  lariat_test.gdml  lariat_v1_1.gdml  lariat_wdisk.gdml  lariat_withMagnets.gdml
JobConfigurations/: BeamlinePIDFilter.fcl  BeamlineReco_Full.fcl  CMakeLists.txt  DataReco.fcl  NNDataProductProducer_Data.fcl  NNDataProductProducer_MC.fcl  PrelReco_forQualityChecks_ClosedBox.fcl  QualityChecks.fcl  Reco.fcl  RecoData_Pion.fcl  RecoMC.fcl  RecoMC_run2.fcl  RecoProd_run2.fcl  RecoProd_run2_NodQdxCorrection.fcl  Reco_Cosmic.fcl  Reco_Shower.fcl  Reco_run2.fcl  Reco_run2_NodQdxCorrection.fcl  Reco_run3a.fcl  SlicerInput.fcl  Stage0Filter.fcl  Stage1Filter.fcl  StoppingTracksFilter.fcl  TOFFilter.fcl  TriggerFilter.fcl  UpstreamTPCMultipliciryFilter.fcl  UpstreamTPCTrackFilter.fcl  WCTrackFilter.fcl  WC_TPC_TrackMatchFilter.fcl  auxdetdigit_sim.fcl  data_multi_pass_reco.fcl  data_multi_pass_reco_run1.fcl  data_multi_pass_reco_run1_nonbeam.fcl  data_multi_pass_reco_run1_norawdigits.fcl  data_multi_pass_reco_run2.fcl  data_multi_pass_reco_run2_100a.fcl  data_multi_pass_reco_run2_60a.fcl  data_multi_pass_reco_run2_MagnetDB.fcl  data_multi_pass_reco_run2_all.fcl  data_multi_pass_reco_run2_allSorted.fcl  (+92 more)
LArIATAnaModule/: .MichelAna_module.cc.swp  .michelana.fcl.swp  AnaTree.fcl  AnaTreeT1034UC_module.cc  AnaTreeT1034_module.cc  CMakeLists.txt  CalculateCrossSection_module.cc  DatabaseExample.fcl  DatabaseExample_module.cc  ELossBeforeTPC.fcl  ELossBeforeTPC_module.cc  LifetimeX_module.cc  Lifetime_module.cc  MCAna.fcl  MCAnalysis_module.cc  MichelAna_module.cc  MichelMCAna.fcl  MichelMCAna_module.cc  OpDetExample.fcl  OpDetExample_module.cc  ParticleDump_module.cc  PurityOnlineT1034_module.cc  Reco_Lifetime.fcl  Smearing.fcl  SmearingMatrix_module.cc  TOFAna_module.cc  TOFAna_module.cc.do.not.build  ThreePointWCCalibration_module.cc  TrackingEffWCMatch_module.cc  TrackingResolution.fcl  TrackingResolution_module.cc  TriggerFilterExample_module.cc  TrueXSAngleCut_module.cc  TrueXS_module.cc  WC2TPCAna_module.cc  WC2TPCStudy.fcl  WCCalibration.fcl  WCEfficiencies_module.cc  WaveformAnalysis.cxx  WaveformAnalysis.h  (+15 more)
LArIATChecks/: CMakeLists.txt  ClockCorrectionCheck.fcl  ClockCorrectionCheck_module.cc  DataQuality_module.cc  EventBuilderCheck.fcl  EventBuilderCheck_module.cc  MuRSChecker_module.cc  NNMCTrackShowerEff.fcl  NNMCTrackShowerEff_module.cc  NNPlotter.fcl  NNPlotter_module.cc  NNTrackShowerEff.fcl  NNTrackShowerEff_module.cc  SlicerCheck.fcl  SlicerCheck_module.cc  WCTrackAnalyzer.fcl  WCTrackAnalyzerSlicing.fcl  WCTrackAnalyzerSlicing_module.cc  WCTrackAnalyzer_module.cc  data_quality.fcl  lariatcheckmodules.fcl
LArIATDataProducts/: AGCounter.cxx  AGCounter.h  AuxDetParticleID.cxx  CMakeLists.txt  ConditionsSummary.cxx  ConditionsSummary.h  Edge.cxx  Edge.h  MuonRangeStackHits.cxx  MuonRangeStackHits.h  TOF.cxx  TOF.h  WCTrack.cxx  WCTrack.h  classes.h  classes_def.xml
LArIATDataProviders/: CMakeLists.txt  DetectorPropertiesLArIAT.cxx  DetectorPropertiesLArIAT.h  LArIATPhotodetectorSER_ch1.txt  LArIATPhotodetectorSER_ch1_Michels.txt  LArIAT_Lifetime_Run1_withErrors.csv  LArIAT_Lifetime_Run2_withErrors.csv
LArIATEventGenerator/: CMakeLists.txt  LArIATFileGen_module.cc  lariatfilegen.fcl  prodsingle_lariat_beam.fcl
LArIATFilterModule/: BasicPiMuFilter_module.cc  BeamlineTrigger_module.cc  CMakeLists.txt  CalWireTPCQuality_module.cc  DDMCPrimaryPicker_module.cc  DoubleFlashFilter_module.cc  HitNumberFilter_module.cc  KaonFilter_module.cc  KeepBeamFilter_module.cc  MassSelectionFilter_module.cc  MichelAnaFilter_module.cc  MichelMCFilter_module.cc  NNShowerFilt.fcl  NNShowerFilter_module.cc  PIDAFilter_module.cc  ParticleFilter_module.cc  PiMuFilter_module.cc  PionSCXSimFilter_module.cc  (+22 more)
Utilities/: CMakeLists.txt  DatabaseUtilityT1034.h  DatabaseUtilityT1034_service.cc  DetectorPropertiesServiceLArIAT.h  DetectorPropertiesServiceLArIAT_service.cc  FileCatalogMetadataLArIAT.h  FileCatalogMetadataLArIAT_service.cc  FindFhiclFile.py  SignalShapingServiceT1034.h  SignalShapingServiceT1034_service.cc  channelstatus_lariat.fcl  database_lariat.fcl  databaseutil_lariat.fcl  databaseutility_lariat.fcl  detectorclocks_lariat.fcl  detectorproperties_lariat.fcl  larfft_lariat.fcl  lariat_prd_passwd  sam_lariat.fcl  services_lariat.fcl  signalservices_lariat.fcl  timeservice_lariat.fcl
(+484 files in other folders)
